Added obsidian config files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -286,4 +286,8 @@ pip-selfcheck.json
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
 
+### Obsidian ###
+# config dir
+.obsidian/
+
 # End of https://www.toptal.com/developers/gitignore/api/python,virtualenv,venv,flask,jupyternotebooks
